--- a/Src/Web/Content/App.scss
+++ b/Src/Web/Content/App.scss
@@ -1,4 +1,4 @@
-body
+﻿body
 {
     font-size: 75%;
     font-family: Verdana, Tahoma, Arial, "Helvetica Neue", Helvetica, Sans-Serif;
@@ -65,4 +65,49 @@ textarea
 .validation-summary-valid
 {
     display: none;
+}
+
+/* lists */
+
+ul.tabs {
+	position:relative;
+	float:left;
+	width:100%;
+	padding:0 0 1.75em 1em;
+	margin:0;
+	list-style:none;
+	line-height:1em;
+
+	li {
+		float:left;
+		margin:0;
+		padding:0;
+		margin-right: 10px;
+	}
+
+	a {
+		display:block;
+		color:#444;
+		text-decoration:none;
+		font-weight:bold;
+		background:#ddd;
+		margin:0;
+		padding:0.25em 1em;
+		border-left:1px solid #fff;
+		border-top:1px solid #fff;
+		border-right:1px solid #aaa;
+
+		&:hover,
+		&:active,
+		&.here:link,
+		&.here:visited {
+			background:#bbb;
+		}
+
+		&.here:link,
+		&.here:visited {
+			position:relative;
+			z-index:102;
+		}
+	}
 }
