--- a/Src/Web/Content/App.css
+++ b/Src/Web/Content/App.css
@@ -1,3 +1,13 @@
+/* Hacks */
+.group {
+  zoom: 1;
+  /* For IE 6/7 (trigger hasLayout) */ }
+  .group:before, .group:after {
+    content: "";
+    display: table; }
+  .group:after {
+    clear: both; }
+
 body {
   font-size: 75%;
   font-family: Verdana, Tahoma, Arial, "Helvetica Neue", Helvetica, Sans-Serif;
@@ -44,6 +54,9 @@ textarea {
   display: none; }
 
 /* lists */
+ul {
+  list-style: none; }
+
 ul.tabs {
   position: relative;
   float: left;
@@ -73,3 +86,29 @@ ul.tabs {
     ul.tabs a.here:link, ul.tabs a.here:visited {
       position: relative;
       z-index: 102; }
+
+/* usersessions */
+#sessions-list {
+  margin: 10px;
+  padding: 0; }
+
+.usersession {
+  width: 300px;
+  border-top: 1px solid #DDD;
+  border-left: 1px solid #DDD;
+  border-right: 1px solid #DDD; }
+
+#actions {
+  border: 1px solid #DDD;
+  margin: 10px; }
+
+#create-session {
+  border: 1px solid #DDD;
+  float: left;
+  padding: 10px;
+  margin-right: 10px; }
+
+#edit-session {
+  border: 1px solid #DDD;
+  padding: 10px;
+  float: left; }
